Added try again button

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
             <input type="email" name="email" id="emailInput" class="emailInput" placeholder="Enter your email...">
             <button class="emailButton" id="emailButton">Subscribe to our newsletter!</button>
         </div> -->
-        <div class="klaviyo-form-U5LXVf emailWrapper" id="emailWrapper"></div>
+        <div class="klaviyo-form-U5LXVf emailWrapper" id="emailWrapper">
+        <button class="tryAgainButton" id="tryAgainButton">Try again</button>
+
+        </div>
     </main>
 
     <script src="./index.js"></script>
