Added middle name field

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                     <label for="lastName">Last Name</label>
                     <input type="text" name="lastName" id="lastName" class="lastName">
                 </div>
+                <div class="middleNameWrapper">
+                    <label for="middleName">Middle name (optional)</label>
+                    <input type="text" name="middleName" id="middleName" class="middleName">
+                </div>
             </div>
             <div class="dateDropdown">
                 <div class="year">
@@ -68,13 +72,8 @@
 
         <p id="resultParagraph"></p>
 
-        <!-- <div class="klaviyo-form-U5LXVf emailWrapper" id="emailWrapper">
-            <input type="email" name="email" id="emailInput" class="emailInput" placeholder="Enter your email...">
-            <button class="emailButton" id="emailButton">Subscribe to our newsletter!</button>
-        </div> -->
         <div class="klaviyo-form-U5LXVf emailWrapper" id="emailWrapper">
         <button class="tryAgainButton" id="tryAgainButton">Try again</button>
-
         </div>
     </main>
 
