Disabled button bug fixed; added media queries

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="text" name="lastName" id="lastName" class="lastName">
                 </div>
                 <div class="middleNameWrapper">
-                    <label for="middleName">Middle name (optional)</label>
+                    <label for="middleName">Middle name</label>
                     <input type="text" name="middleName" id="middleName" class="middleName">
                 </div>
             </div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <button class="calculateButton" id="calculateButton">Calculate</button>
+            <button class="calculateButton buttonDisabled" id="calculateButton">Calculate</button>
         </div>
 
         <div class="loader" id="loader">
